--- a/views/agents/agent_add.html
+++ b/views/agents/agent_add.html
@@ -6,9 +6,9 @@
 
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="/">Inicio</a></li>
-        <li class="breadcrumb-item"><a href="/agents">Agentes</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Añadir</li>
+        <li class="breadcrumb-item"><a class="breadcrumb-custom" href="/">Inicio</a></li>
+        <li class="breadcrumb-item"><a class="breadcrumb-custom" href="/agents">Agentes</a></li>
+        <li class="breadcrumb-item active breadcrumb-custom" aria-current="page">Añadir</li>
     </ol>
 </nav>
 
