--- a/views/properties/property_modify.html
+++ b/views/properties/property_modify.html
@@ -8,9 +8,9 @@
 {% extends "../base.html" %} {% block titulo %} ARCA Inmobiliaria {% endblock %} {% block contenido_principal %}
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="/">Inicio</a></li>
-        <li class="breadcrumb-item"><a href="/myproperties">Mis Propiedades</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Editar</li>
+        <li class="breadcrumb-item"><a class="breadcrumb-custom" href="/">Inicio</a></li>
+        <li class="breadcrumb-item"><a class="breadcrumb-custom" href="/myproperties">Mis Propiedades</a></li>
+        <li class="breadcrumb-item active breadcrumb-custom" aria-current="page">Editar</li>
     </ol>
 </nav>
 
