--- a/views/users/user_modify.html
+++ b/views/users/user_modify.html
@@ -5,8 +5,8 @@
 {% block contenido_principal %}
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="/">Inicio</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Editar Usuario</li>
+        <li class="breadcrumb-item"><a class="breadcrumb-custom" href="/">Inicio</a></li>
+        <li class="breadcrumb-item active breadcrumb-custom" aria-current="page">Editar Usuario</li>
     </ol>
 </nav>
 <div class="container">
