--- a/views/agents/agent_modify.html
+++ b/views/agents/agent_modify.html
@@ -5,9 +5,9 @@
 {% block contenido_principal %}
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="/">Inicio</a></li>
-        <li class="breadcrumb-item"><a href="/agents">Agentes</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Modificar</li>
+        <li class="breadcrumb-item"><a class="breadcrumb-custom"href="/">Inicio</a></li>
+        <li class="breadcrumb-item"><a class="breadcrumb-custom"href="/agents">Agentes</a></li>
+        <li class="breadcrumb-item active breadcrumb-custom" aria-current="page">Modificar</li>
     </ol>
 </nav>
 <div class="container">
