--- a/views/users/user_modify.html
+++ b/views/users/user_modify.html
@@ -10,7 +10,7 @@
     </ol>
 </nav>
 <div class="container">
-    <h2 class="sectionHeader">Editar Perfil</h2>
+    <h1 class="sectionHeader">Editar Perfil</h1>
     <form class="form-horizontal" method="post" action="/users/edit" encType="multipart/form-data">
         <div class="form-group">
             <label class="control-label col-sm-2" for="name">Nombre:</label>
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-sm-2" for="password">Contraseña Actual:</label>
+            <label class="control-label col-sm-2" for="oldPassword">Contraseña Actual:</label>
             <div class="col-sm-10">
                 <input id="oldPassword" type="password" class="form-control" name="oldPassword"
                        maxlength="50" minlength="8" required="true"/>
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-sm-3" for="password">Repetir Nueva Contraseña:</label>
+            <label class="control-label col-sm-3" for="passwordR">Repetir Nueva Contraseña:</label>
             <div class="col-sm-9">
                 <input id="passwordR" type="password" class="form-control" name="passwordR"
                        maxlength="50" minlength="8"/>
