--- a/views/base.html
+++ b/views/base.html
@@ -86,7 +86,7 @@
     <!-- Barra de Navegación superior -->
     <nav role="navigation" aria-label="Main" class="navbar navbar-expand-lg navbar-dark custom-base-style">
         <a class="link-logo navbar-brand" href="/">
-            <img class="imgLogo" src="/img/arca.png" alt="logo"/>
+            <img class="imgLogo" src="/img/arca.png" alt="Logotipo Arca Agencia Inmobiliaria"/>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar"
                 aria-controls="myNavbar" aria-expanded="false" aria-label="Expandir Navegación">
